unpackaged/main/default/objects/Spend_Band_Review__c/Spend_Band_Review__c.object-meta.xml
<CustomObject>
    <description>This Object represents the Spend Band Review table mastered in the Commercial Pricing System (CPS). CPS is the master of the Spend Band review data, Salesforce owns the Spend Band Review approval process.</description>
    <label>Spend Band Review</label>
    <nameField>
        <displayFormat>SBR-{0000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Band Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>