unpackaged/main/default/objects/Spend_Band_Review__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Spend Band Reviews</relationshipLabel>
    <relationshipName>Spend_Band_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>