unpackaged/main/default/objects/Spend_Band_Review__c/fields/Current_Spend_Band__c.field-meta.xml
<CustomField>
    <fullName>Current_Spend_Band__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Spend Band</label>
    <referenceTo>Spend_Band__c</referenceTo>
    <relationshipLabel>Current Spend Band Level - Spend Band Reviews</relationshipLabel>
    <relationshipName>Spend_Band_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>