unpackaged/main/default/objects/Spend_Band_Review__c/fields/Level_1_Action__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Action__c</fullName>
    <inlineHelpText>A is for Accepted. R is for Rejected</inlineHelpText>
    <label>Level 1 Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>