unpackaged/main/default/objects/Spend_Band_Review__c/fields/Level_1_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Action_Date__c</fullName>
    <label>Level 1 Action Date</label>
    <type>DateTime</type>
</CustomField>