unpackaged/main/default/objects/Spend_Band_Review__c/fields/Level_1_Comments__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Comments__c</fullName>
    <label>Level 1 Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>