unpackaged/main/default/objects/Spend_Band_Review__c/fields/Level_2_Comments__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Comments__c</fullName>
    <label>Level 2 Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>