unpackaged/main/default/objects/Spend_Band_Review__c/fields/Projected_12_Month_Sales_Temp__c.field-meta.xml
<CustomField>
    <fullName>Projected_12_Month_Sales_Temp__c</fullName>
    <description>Temp field</description>
    <label>Projected 12 Month Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>