unpackaged/main/default/objects/Spend_Band_Review__c/fields/Projected_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_Amount__c</fullName>
    <description>Pulls the last 3 months of sales from the Account and multiplies by 4</description>
    <formula>Account__r.Last_3_Month_Sales__c * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected 12 Month Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>