unpackaged/main/default/objects/Spend_Band_Review__c/fields/Proposed_Spend_Band__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Spend_Band__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proposed Spend Band</label>
    <referenceTo>Spend_Band__c</referenceTo>
    <relationshipLabel>Proposed Spend Band - Spend Band Reviews</relationshipLabel>
    <relationshipName>Spend_Band_Reviews1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>