unpackaged/main/default/objects/Spend_Band_Review__c/fields/Rolling_12_Month_Sales_Temp__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Month_Sales_Temp__c</fullName>
    <description>Temp field for Rolling 12 Month Sales</description>
    <label>Rolling 12 Month Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>