unpackaged/main/default/objects/Spend_Band_Review__c/fields/Spend_Band_Review_ID__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band_Review_ID__c</fullName>
    <externalId>true</externalId>
    <label>Spend Band Review ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>