unpackaged/main/default/objects/Spend_Band_Review__c/fields/Spend_Band_Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band_Review_Link__c</fullName>
    <description>Used in Spend Band Review Email notification</description>
    <formula>HYPERLINK(Spend_Band_Review_Org_Link__c, Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Band Review Link</label>
    <type>Text</type>
</CustomField>