unpackaged/main/default/objects/Spend_Band_Review__c/fields/Spend_Band_Review_Org_Link__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band_Review_Org_Link__c</fullName>
    <description>Spend Band Review Org Link</description>
    <formula>LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Band Review Org Link</label>
    <type>Text</type>
</CustomField>