unpackaged/main/default/objects/Spend_Band_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>Approver 1</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>Approver 2</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>